# naijaledger

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
engine/: README.md  pyproject.toml
engine/alembic/: env.py
engine/alembic/versions/: 20260707_0001_sources_registry.py  20260707_0002_fetch_records.py  20260708_0003_documents.py  20260710_0004_extractions.py  20260710_0005_jobs.py  20260710_0006_finance.py  20260710_0007_match_proposals.py  20260710_0008_flags.py  20260710_0009_review_decisions.py  20260711_0010_jobs_normalize_load.py  20260711_0011_tender_geo_year.py  (+2 more)
engine/tests/: conftest.py  test_agent_runtime.py  test_anomaly_backtest.py  test_anomaly_flags.py  test_api_hardening.py  test_archive_storage.py  test_budget_lines_load.py  test_db_connection.py  test_docling_pdf.py  test_documents.py  test_documents_migration.py  test_e8_agents_review.py  test_extract_pipeline.py  test_extractions.py  test_fetch_records_migration.py  test_fetch_scrapling.py  test_fetch_static.py  test_finance_schema.py  test_geo.py  test_graph_plan.py  test_graph_read_api.py  test_graph_rebuild.py  test_health.py  test_html_portal.py  test_http_client.py  test_jobs.py  test_link_discovery.py  test_magika_router.py  test_match_proposals.py  test_ocds_normalizer.py  test_ocr_pass2.py  test_partner_export.py  test_party_matching.py  test_playwright_fetch.py  test_public_read_api.py  test_red_flag_rules.py  test_seed_sources.py  test_source_health.py  test_sources_migration.py  test_sources_service.py  (+1 more)
(+259 files in other folders)
