[project]
name = "naijaledger-engine"
version = "0.1.0"
description = "NaijaLedger ingestion, normalization, and API engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "httpx>=0.28",
    "minio>=7.2",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
naijaledger-api = "naijaledger.main:run"
naijaledger-seed = "naijaledger.seeds.cli:run"
naijaledger-health-monitor = "naijaledger.sources.health_cli:run"
naijaledger-archive-init = "naijaledger.archive.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naijaledger"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["naijaledger"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (MinIO, etc.)",
]
